--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@ img {
     min-height: 100vh;
     background-color: #dce2e3;
     color: #364d62;
-    padding: 50px 30px 30px 30px;
+    padding: 30px 30px 30px 30px;
     
     animation: fadeIn;
     animation-duration: 0.5s;
@@ -250,6 +250,12 @@ img {
 
 figcaption {
     text-align: center;
+}
+
+@media only screen and (min-width: 1360px) {
+    .projects {
+        padding: 50px 30px 30px 30px;
+    }
 }
 
 @media only screen and (max-width: 800px) {
