--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ a:visited {
     color: #364d62;
 }
 
+span {
+    text-align: center;
+    color: #ff636f;
+}
+
 /*LANDING PAGE*/
 .landing {
     display: flex;
@@ -31,7 +36,7 @@ a:visited {
     animation-fill-mode: forwards;
 }
 
-h1 {
+.landing h1 {
     font-size: 70px;
     margin-top: -10px;
     text-align: center;
@@ -53,29 +58,29 @@ i {
 }
 
 @media only screen and (max-width: 992px) {
-    h1 {
+    .landing h1 {
         font-size: 50px;
     }
     
-    .title {
+    .landing .title {
         font-size: 35px;
     }
     
-    hr {
+    .landing hr {
         padding: 0 250px;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    h1 {
+    .landing h1 {
         font-size: 30px;
     }
     
-    .title {
+    .landing .title {
         font-size: 20px;
     }
     
-    hr {
+    .landing hr {
         padding: 0 125px;
     }
 }
@@ -86,15 +91,13 @@ i {
     top: 30px;
     right: 30px;
     cursor: pointer;
-    /*ADDED*/
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 35px;
 }
 
 #menu-close {
     position: absolute;
-    top: 30px;
-    right: 30px;
+    top: 23px;
+    right: 28px;
     cursor: pointer;
 }
 
@@ -148,20 +151,20 @@ i {
     font-size: 20px;
 }
 
-ul {
+.about h1 {
+    font-size: 70px;
+    margin-top: -10px;
+    text-align: center;
+}
+
+.about ul {
     list-style: none;
     margin: 0;
     margin-top: 5px;
     padding: 0;
 }
 
-span {
-    text-align: center;
-    font-weight: ;
-    color: #ff636f;
-}
-
-img {
+.about img {
     max-width: 100%;
     border-radius: 5px;
 }
@@ -172,7 +175,25 @@ img {
     text-align: justify;
 }
 
+@media only screen and (max-width: 992px) {
+    .about h1 {
+        font-size: 50px;
+    }
+}
+
 @media only screen and (max-width: 600px) {
+    .menu a {
+        font-size: 25px;
+    }
+    
+    #menu-open {
+        font-size: 30px;
+    }
+    
+    #menu-close {
+        font-size: 40px;
+    }
+    
     .about-content {
         flex-direction: column;
         align-content: center;
@@ -181,13 +202,14 @@ img {
     
     .about h1 {
         margin-top: 80px;
+        font-size: 30px;
     }
     
-    .list-1 {
+    .about .list-1 {
         margin-top: 30px;
     }
     
-    .list-2 {
+    .about .list-2 {
         margin-top: 30px;
     }
 }
@@ -239,6 +261,17 @@ img {
     animation-fill-mode: forwards;
 }
 
+.projects h1 {
+    font-size: 70px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.projects div img {
+    border-radius: 5px 5px 0 0;
+    max-width: 100%;
+}
+
 .project-list {
     display: flex;
     flex-direction: row;
@@ -248,16 +281,30 @@ img {
 
 .project-list div {
     flex-basis: 30%;
-    padding: 10px;
+    padding: 20px 20px 20px 20px;
 }
 
-figcaption {
+.projects figcaption {
     text-align: center;
+    border: 1px solid #364d62;
+    margin-top: -8px;
+    padding: 15px 5px 15px 5px;
+    border-radius: 0 0 5px 5px;
 }
 
 @media only screen and (min-width: 1360px) {
     .projects {
         padding: 50px 30px 30px 30px;
+    }
+    
+    .projects h1 {
+        margin-bottom: 25px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .projects h1 {
+        font-size: 50px;
     }
 }
 
@@ -267,12 +314,23 @@ figcaption {
     }
     
     .projects h1 {
-        margin-top: 50px;
+        margin-top: 45px;
     }
 }
 
 @media only screen and (max-width: 600px) {
+    .projects h1 {
+        margin-bottom: 10px;
+        font-size: 30px;
+    }
     
+    .projects div figcaption {
+        font-size: 15px;
+    }
+    
+    .project-list div {
+        padding: 10px 10px;
+    }
 }
 
 /*CONTACT*/
@@ -292,6 +350,18 @@ figcaption {
     animation-fill-mode: forwards;
 }
 
+.contact h1 {
+    font-size: 70px;
+    margin-top: -10px;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.contact h2 {
+    margin: 0;
+    padding: 10px;
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -299,5 +369,21 @@ figcaption {
     
     100% {
         opacity: 1;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .contact h1 {
+        font-size: 50px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .contact h1 {
+        font-size: 30px;
+    }
+    
+    .contact h2 {
+        font-size: 17px;
     }
 }
