Added new project to projects list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,7 @@ i {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center; 
+    justify-content: flex-start; 
 }
 
 .project-list div {
