--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,9 +94,10 @@ i {
     font-size: 35px;
     
     animation-name: bounce;
-    animation-iteration-count: infinite;
-    animation-duration: 3s;
-    animation-fill-mode: none;
+    animation-iteration-count: 2;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
     animation-delay: 0s;
 }
 
