--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,7 +306,7 @@ i {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start; 
+    justify-content: center;
 }
 
 .project-list div {
@@ -332,9 +332,13 @@ i {
     }
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 1024px) {
     .projects h1 {
         font-size: 50px;
+    }
+    
+    .project-list div {
+        flex-basis: 40%;
     }
 }
 
