--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,8 +194,8 @@ i {
 }
 
 .about img {
-    max-width: 100%;
-    border-radius: 5px;
+    max-width: 70%;
+    /*border-radius: 5px;*/
 }
 
 .about-me {
@@ -312,6 +312,7 @@ i {
 .project-list div {
     flex-basis: 30%;
     padding: 20px 20px 20px 20px;
+    font-size: 15px;
 }
 
 .projects figcaption {
